@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin smtp n 1.3.6]
+[manpage_begin smtp n 1.4]
 [copyright {1999-2000 Marshall T. Rose}]
 [moddesc   {smtp client}]
 [titledesc {Client-side tcl implementation of the smtp protocol}]
 [require Tcl]
 [require mime [opt 1.4]]
-[require smtp [opt 1.3.6]]
+[require smtp [opt 1.4]]
 [description]
 [para]
 
