@@ -8,7 +8,7 @@
 
 package require Tcl 8.3
 package require mime 1.4
-package provide smtp 1.3.6
+package provide smtp 1.4
 
 #
 # state variables:
