@@ -1,2 +1,2 @@
-set tcllib_version 1.6
+set tcllib_version 1.6.1.1
 set tcllib_name    tcllib
