@@ -1,3 +1,8 @@
+2004-05-23  Andreas Kupries  <andreask@activestate.com>
+
+	* tcllib_version.tcl: Changed version in main line to distinguish
+	  it from the 1.6 branch and the release coming up in it.
+
 2004-05-07  Andreas Kupries  <andreask@activestate.com>
 
 	* New module for querying JPEG images, and manipulating their
